changed the HealthcareProvider entity to HIC and regenerated the python library
